<?xml version="1.0"?>
<package>
  <name>mobility_base_pointcloud_filter</name>
  <version>0.0.1</version>
  <description>
    Remove points in the blind spots of the Dataspeed Inc. Mobility Base.
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_pointcloud_filter</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_pointcloud_filter/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
